# QDMpy

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  LICENCE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  tst.py  tutorial.ipynb
QDMpy/: __init__.py  plotting.py  utils.py
QDMpy/_core/: convert.py  fit.py  models.py  odmr.py  outlier.py  qdm.py
QDMpy/app/: app.py  canvas.py  models.py
QDMpy/app/assets/: GuiElements.py
QDMpy/app/cache/: cache.db
QDMpy/app/widgets/: fit_widget.py  fluo_widget.py  qdm_widget.py  tools.py
QDMpy/cli/: calculate_QDMio.py
api_docs/: index.html
changelog/: index.html
cli/: index.html
docs/: api_docs.md
pyGpufit/: README.txt
quickstart/: index.html
search/: search_index.json
src/QDMpy/: __init__.py  config.ini  exceptions.py  logging.conf  plotting.py  utils.py
src/QDMpy/_core/: convert.py  edit.py  fit.py  models.py  odmr.py  outlier.py  qdm.py
src/QDMpy/app/: __init__.py  app.py  canvas.py  models.py
src/QDMpy/app/assets/: GuiElements.py
src/QDMpy/app/widgets/: fit_widget.py  fluo_widget.py  global_widget.py  misc.py  qdm_widget.py  quality_widget.py  simple_widget.py  stats_widget.py  tools.py  warning_windows.py
src/QDMpy/cli/: calculate_QDMio.py
src/QDMpy/core/: __init__.py  fit.py  models.py  odmr.py  outlier.py  qdm.py
src/pyGpufit/linux/: pyGpufit-1.2.0-py2.py3-none-any.whl
src/pyGpufit/win/: pyGpufit-1.2.0-py2.py3-none-any.whl
src/pyqdm/: __init__.py  config.ini  exceptions.py  logging.conf  plotting.py  utils.py
src/pyqdm/app/: __init__.py  app.py  canvas.py  models.py
src/pyqdm/app/widgets/: fit_widget.py  fluo_widget.py  global_widget.py  misc.py  qdm_widget.py  quality_widget.py  simple_widget.py  tools.py  warning_windows.py
src/pyqdm/app/windows/: QDMpy_plot_window.py  fit_window.py  fluorescence_window.py  global_fluorescence_window.py  misc.py  pyqdm_plot_window.py  quality_window.py  simple_plot_window.py  tools.py  warning_windows.py
src/pyqdm/cli/: calculate_QDMio.py
src/pyqdm/core/: fit.py  fitting.py  models.py  odmr.py  qdm.py
tests/: test_covert.py  test_fit.py  test_models.py  test_odmr.py  test_utils.py
tests/data/: laser.csv
